APIs/googleapis.com/cloudresourcemanager/v1/javascript-client/README.md
# cloud_resource_manager_api

CloudResourceManagerApi - JavaScript client for cloud_resource_manager_api
Creates, reads, and updates metadata for Google Cloud Platform resource containers.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: v1
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install cloud_resource_manager_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your cloud_resource_manager_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var CloudResourceManagerApi = require('cloud_resource_manager_api');

var defaultClient = CloudResourceManagerApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new CloudResourceManagerApi.LiensApi()
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'lien': new CloudResourceManagerApi.Lien() // {Lien} 
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.cloudresourcemanagerLiensCreate(opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudresourcemanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CloudResourceManagerApi.LiensApi* | [**cloudresourcemanagerLiensCreate**](docs/LiensApi.md#cloudresourcemanagerLiensCreate) | **POST** /v1/liens | 
*CloudResourceManagerApi.LiensApi* | [**cloudresourcemanagerLiensDelete**](docs/LiensApi.md#cloudresourcemanagerLiensDelete) | **DELETE** /v1/{name} | 
*CloudResourceManagerApi.LiensApi* | [**cloudresourcemanagerLiensList**](docs/LiensApi.md#cloudresourcemanagerLiensList) | **GET** /v1/liens | 
*CloudResourceManagerApi.OrganizationsApi* | [**cloudresourcemanagerOrganizationsGet**](docs/OrganizationsApi.md#cloudresourcemanagerOrganizationsGet) | **GET** /v1/{name} | 
*CloudResourceManagerApi.OrganizationsApi* | [**cloudresourcemanagerOrganizationsGetIamPolicy**](docs/OrganizationsApi.md#cloudresourcemanagerOrganizationsGetIamPolicy) | **POST** /v1/{resource}:getIamPolicy | 
*CloudResourceManagerApi.OrganizationsApi* | [**cloudresourcemanagerOrganizationsSearch**](docs/OrganizationsApi.md#cloudresourcemanagerOrganizationsSearch) | **POST** /v1/organizations:search | 
*CloudResourceManagerApi.OrganizationsApi* | [**cloudresourcemanagerOrganizationsSetIamPolicy**](docs/OrganizationsApi.md#cloudresourcemanagerOrganizationsSetIamPolicy) | **POST** /v1/{resource}:setIamPolicy | 
*CloudResourceManagerApi.OrganizationsApi* | [**cloudresourcemanagerOrganizationsTestIamPermissions**](docs/OrganizationsApi.md#cloudresourcemanagerOrganizationsTestIamPermissions) | **POST** /v1/{resource}:testIamPermissions | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsClearOrgPolicy**](docs/ProjectsApi.md#cloudresourcemanagerProjectsClearOrgPolicy) | **POST** /v1/{resource}:clearOrgPolicy | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsCreate**](docs/ProjectsApi.md#cloudresourcemanagerProjectsCreate) | **POST** /v1/projects | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsDelete**](docs/ProjectsApi.md#cloudresourcemanagerProjectsDelete) | **DELETE** /v1/projects/{projectId} | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsGet**](docs/ProjectsApi.md#cloudresourcemanagerProjectsGet) | **GET** /v1/projects/{projectId} | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsGetAncestry**](docs/ProjectsApi.md#cloudresourcemanagerProjectsGetAncestry) | **POST** /v1/projects/{projectId}:getAncestry | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsGetEffectiveOrgPolicy**](docs/ProjectsApi.md#cloudresourcemanagerProjectsGetEffectiveOrgPolicy) | **POST** /v1/{resource}:getEffectiveOrgPolicy | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsGetIamPolicy**](docs/ProjectsApi.md#cloudresourcemanagerProjectsGetIamPolicy) | **POST** /v1/projects/{resource}:getIamPolicy | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsGetOrgPolicy**](docs/ProjectsApi.md#cloudresourcemanagerProjectsGetOrgPolicy) | **POST** /v1/{resource}:getOrgPolicy | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsList**](docs/ProjectsApi.md#cloudresourcemanagerProjectsList) | **GET** /v1/projects | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsListAvailableOrgPolicyConstraints**](docs/ProjectsApi.md#cloudresourcemanagerProjectsListAvailableOrgPolicyConstraints) | **POST** /v1/{resource}:listAvailableOrgPolicyConstraints | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsListOrgPolicies**](docs/ProjectsApi.md#cloudresourcemanagerProjectsListOrgPolicies) | **POST** /v1/{resource}:listOrgPolicies | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsSetIamPolicy**](docs/ProjectsApi.md#cloudresourcemanagerProjectsSetIamPolicy) | **POST** /v1/projects/{resource}:setIamPolicy | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsSetOrgPolicy**](docs/ProjectsApi.md#cloudresourcemanagerProjectsSetOrgPolicy) | **POST** /v1/{resource}:setOrgPolicy | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsTestIamPermissions**](docs/ProjectsApi.md#cloudresourcemanagerProjectsTestIamPermissions) | **POST** /v1/projects/{resource}:testIamPermissions | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsUndelete**](docs/ProjectsApi.md#cloudresourcemanagerProjectsUndelete) | **POST** /v1/projects/{projectId}:undelete | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsUpdate**](docs/ProjectsApi.md#cloudresourcemanagerProjectsUpdate) | **PUT** /v1/projects/{projectId} | 


## Documentation for Models

 - [CloudResourceManagerApi.Ancestor](docs/Ancestor.md)
 - [CloudResourceManagerApi.AuditConfig](docs/AuditConfig.md)
 - [CloudResourceManagerApi.AuditLogConfig](docs/AuditLogConfig.md)
 - [CloudResourceManagerApi.Binding](docs/Binding.md)
 - [CloudResourceManagerApi.BooleanPolicy](docs/BooleanPolicy.md)
 - [CloudResourceManagerApi.ClearOrgPolicyRequest](docs/ClearOrgPolicyRequest.md)
 - [CloudResourceManagerApi.CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation.md)
 - [CloudResourceManagerApi.CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation.md)
 - [CloudResourceManagerApi.Constraint](docs/Constraint.md)
 - [CloudResourceManagerApi.CreateFolderMetadata](docs/CreateFolderMetadata.md)
 - [CloudResourceManagerApi.CreateProjectMetadata](docs/CreateProjectMetadata.md)
 - [CloudResourceManagerApi.Expr](docs/Expr.md)
 - [CloudResourceManagerApi.FolderOperation](docs/FolderOperation.md)
 - [CloudResourceManagerApi.FolderOperationError](docs/FolderOperationError.md)
 - [CloudResourceManagerApi.GetAncestryResponse](docs/GetAncestryResponse.md)
 - [CloudResourceManagerApi.GetEffectiveOrgPolicyRequest](docs/GetEffectiveOrgPolicyRequest.md)
 - [CloudResourceManagerApi.GetIamPolicyRequest](docs/GetIamPolicyRequest.md)
 - [CloudResourceManagerApi.GetOrgPolicyRequest](docs/GetOrgPolicyRequest.md)
 - [CloudResourceManagerApi.GetPolicyOptions](docs/GetPolicyOptions.md)
 - [CloudResourceManagerApi.Lien](docs/Lien.md)
 - [CloudResourceManagerApi.ListAvailableOrgPolicyConstraintsRequest](docs/ListAvailableOrgPolicyConstraintsRequest.md)
 - [CloudResourceManagerApi.ListAvailableOrgPolicyConstraintsResponse](docs/ListAvailableOrgPolicyConstraintsResponse.md)
 - [CloudResourceManagerApi.ListConstraint](docs/ListConstraint.md)
 - [CloudResourceManagerApi.ListLiensResponse](docs/ListLiensResponse.md)
 - [CloudResourceManagerApi.ListOrgPoliciesRequest](docs/ListOrgPoliciesRequest.md)
 - [CloudResourceManagerApi.ListOrgPoliciesResponse](docs/ListOrgPoliciesResponse.md)
 - [CloudResourceManagerApi.ListPolicy](docs/ListPolicy.md)
 - [CloudResourceManagerApi.ListProjectsResponse](docs/ListProjectsResponse.md)
 - [CloudResourceManagerApi.MoveFolderMetadata](docs/MoveFolderMetadata.md)
 - [CloudResourceManagerApi.Operation](docs/Operation.md)
 - [CloudResourceManagerApi.OrgPolicy](docs/OrgPolicy.md)
 - [CloudResourceManagerApi.Organization](docs/Organization.md)
 - [CloudResourceManagerApi.OrganizationOwner](docs/OrganizationOwner.md)
 - [CloudResourceManagerApi.Policy](docs/Policy.md)
 - [CloudResourceManagerApi.Project](docs/Project.md)
 - [CloudResourceManagerApi.ProjectCreationStatus](docs/ProjectCreationStatus.md)
 - [CloudResourceManagerApi.ResourceId](docs/ResourceId.md)
 - [CloudResourceManagerApi.SearchOrganizationsRequest](docs/SearchOrganizationsRequest.md)
 - [CloudResourceManagerApi.SearchOrganizationsResponse](docs/SearchOrganizationsResponse.md)
 - [CloudResourceManagerApi.SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [CloudResourceManagerApi.SetOrgPolicyRequest](docs/SetOrgPolicyRequest.md)
 - [CloudResourceManagerApi.Status](docs/Status.md)
 - [CloudResourceManagerApi.TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [CloudResourceManagerApi.TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/cloud-platform.read-only: View your data across Google Cloud services and see the email address of your Google Account

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/cloud-platform.read-only: View your data across Google Cloud services and see the email address of your Google Account

