APIs/googleapis.com/cloudresourcemanager/v2/javascript-client/README.md
# cloud_resource_manager_api

CloudResourceManagerApi - JavaScript client for cloud_resource_manager_api
Creates, reads, and updates metadata for Google Cloud Platform resource containers.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2
- Package version: v2
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install cloud_resource_manager_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your cloud_resource_manager_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var CloudResourceManagerApi = require('cloud_resource_manager_api');

var defaultClient = CloudResourceManagerApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new CloudResourceManagerApi.FoldersApi()
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'parent': "parent_example", // {String} Required. The resource name of the new Folder's parent. Must be of the form `folders/{folder_id}` or `organizations/{org_id}`.
  'folder': new CloudResourceManagerApi.Folder() // {Folder} 
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.cloudresourcemanagerFoldersCreate(opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudresourcemanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersCreate**](docs/FoldersApi.md#cloudresourcemanagerFoldersCreate) | **POST** /v2/folders | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersDelete**](docs/FoldersApi.md#cloudresourcemanagerFoldersDelete) | **DELETE** /v2/{name} | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersGet**](docs/FoldersApi.md#cloudresourcemanagerFoldersGet) | **GET** /v2/{name} | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersGetIamPolicy**](docs/FoldersApi.md#cloudresourcemanagerFoldersGetIamPolicy) | **POST** /v2/{resource}:getIamPolicy | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersList**](docs/FoldersApi.md#cloudresourcemanagerFoldersList) | **GET** /v2/folders | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersMove**](docs/FoldersApi.md#cloudresourcemanagerFoldersMove) | **POST** /v2/{name}:move | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersPatch**](docs/FoldersApi.md#cloudresourcemanagerFoldersPatch) | **PATCH** /v2/{name} | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersSearch**](docs/FoldersApi.md#cloudresourcemanagerFoldersSearch) | **POST** /v2/folders:search | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersSetIamPolicy**](docs/FoldersApi.md#cloudresourcemanagerFoldersSetIamPolicy) | **POST** /v2/{resource}:setIamPolicy | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersTestIamPermissions**](docs/FoldersApi.md#cloudresourcemanagerFoldersTestIamPermissions) | **POST** /v2/{resource}:testIamPermissions | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersUndelete**](docs/FoldersApi.md#cloudresourcemanagerFoldersUndelete) | **POST** /v2/{name}:undelete | 
*CloudResourceManagerApi.OperationsApi* | [**cloudresourcemanagerOperationsGet**](docs/OperationsApi.md#cloudresourcemanagerOperationsGet) | **GET** /v1/{name} | 


## Documentation for Models

 - [CloudResourceManagerApi.AuditConfig](docs/AuditConfig.md)
 - [CloudResourceManagerApi.AuditLogConfig](docs/AuditLogConfig.md)
 - [CloudResourceManagerApi.Binding](docs/Binding.md)
 - [CloudResourceManagerApi.CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation.md)
 - [CloudResourceManagerApi.CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation.md)
 - [CloudResourceManagerApi.CreateFolderMetadata](docs/CreateFolderMetadata.md)
 - [CloudResourceManagerApi.CreateProjectMetadata](docs/CreateProjectMetadata.md)
 - [CloudResourceManagerApi.Expr](docs/Expr.md)
 - [CloudResourceManagerApi.Folder](docs/Folder.md)
 - [CloudResourceManagerApi.FolderOperation](docs/FolderOperation.md)
 - [CloudResourceManagerApi.FolderOperationError](docs/FolderOperationError.md)
 - [CloudResourceManagerApi.GetIamPolicyRequest](docs/GetIamPolicyRequest.md)
 - [CloudResourceManagerApi.GetPolicyOptions](docs/GetPolicyOptions.md)
 - [CloudResourceManagerApi.ListFoldersResponse](docs/ListFoldersResponse.md)
 - [CloudResourceManagerApi.MoveFolderMetadata](docs/MoveFolderMetadata.md)
 - [CloudResourceManagerApi.MoveFolderRequest](docs/MoveFolderRequest.md)
 - [CloudResourceManagerApi.Operation](docs/Operation.md)
 - [CloudResourceManagerApi.Policy](docs/Policy.md)
 - [CloudResourceManagerApi.ProjectCreationStatus](docs/ProjectCreationStatus.md)
 - [CloudResourceManagerApi.SearchFoldersRequest](docs/SearchFoldersRequest.md)
 - [CloudResourceManagerApi.SearchFoldersResponse](docs/SearchFoldersResponse.md)
 - [CloudResourceManagerApi.SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [CloudResourceManagerApi.Status](docs/Status.md)
 - [CloudResourceManagerApi.TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [CloudResourceManagerApi.TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/cloud-platform.read-only: View your data across Google Cloud services and see the email address of your Google Account

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/cloud-platform.read-only: View your data across Google Cloud services and see the email address of your Google Account

